--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/order_confirmation.js" defer></script>
     <meta http-equiv="Content-Security-Policy"
-	      content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: http://localhost:5000 http://127.0.0.1:5000 https://cdn.jsdelivr.net;">
+	      content="
+	        default-src 'self' https://rowannoel.github.io https://rowannoel.github.io/cs582FinalProject;
+	        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://rowannoel.github.io https://rowannoel.github.io/cs582FinalProject;
+	        connect-src http://localhost:5000 http://127.0.0.1:5000;
+	        style-src 'self' 'unsafe-inline' https://rowannoel.github.io https://rowannoel.github.io/cs582FinalProject;
+	      ">
 
 </head>
 <body>
