--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,13 @@
     <script src="js/cart.js" defer></script>
     <script src="js/cart_page.js" defer></script>
     <meta http-equiv="Content-Security-Policy"
-	      content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: http://localhost:5000 http://127.0.0.1:5000 https://cdn.jsdelivr.net;">
+	      content="
+	        default-src 'self' https://rowannoel.github.io https://cdn.jsdelivr.net;
+	        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://rowannoel.github.io;
+	        style-src 'self' 'unsafe-inline';
+	        img-src 'self' data:;
+	        connect-src 'self' https: http: http://localhost:5000 http://127.0.0.1:5000;
+	      ">
 
 </head>
 <body>
