--- a/reports.html
+++ b/reports.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <title>Reports</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/config.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/cart.js" defer></script>
-    <script src="js/reports.js" defer></script>
     <meta http-equiv="Content-Security-Policy"
-	      content="
-	        default-src 'self' https://rowannoel.github.io https://cdn.jsdelivr.net;
-	        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://rowannoel.github.io;
-	        style-src 'self' 'unsafe-inline';
-	        img-src 'self' data:;
-	        connect-src 'self' https: http: http://localhost:5000 http://127.0.0.1:5000;
-	      ">
-
+          content="
+            default-src 'self' https://rowannoel.github.io https://cdn.jsdelivr.net;
+            script-src 'self' 'unsafe-inline' 'unsafe-eval' https://rowannoel.github.io https://cdn.jsdelivr.net;
+            style-src 'self' 'unsafe-inline';
+            img-src 'self' data:;
+            connect-src 'self' https: http: http://localhost:5000 http://127.0.0.1:5000;
+          ">
 </head>
 <body>
 
@@ -55,5 +53,7 @@
     <div id="lowStockWarnings"></div>
 </section>
 
+<script src="js/cart.js"></script>
+<script src="js/reports.js"></script>
 </body>
 </html>
